<resources>
    <string name="app_name">Actionbar Experiement</string>
    <string name="action_settings">Settings</string>

    <string name ="ui_tabname_breakfast">breakfast</string>
    <string name ="ui_tabname_lunch">lunch</string>
    <string name="ui_tabname_snack">snack</string>
    <string name="ui_tabname_dinner">dinner</string>
    <string name="ui_menu_search">Search</string>
    <string name="ui_menu_send">Send</string>
    <string name="ui_menu_share">Share</string>
    <string name="ui_menu_feedback">Feedback</string>
    <string name="ui_menu_about">About</string>
    <string name="ui_menu_quit">Quit</string>


</resources>
