<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"

    tools:context="com.actionbarexperiment.tylermay14.actionbarexperiement.MyActivity">

    <item
        android:id="@+id/menuitem_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:title="@string/ui_menu_search">
    </item>

    <item
        android:id="@+id/menuitem_send"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/ui_menu_send">
    </item>
    <item
        android:id="@+id/menuitem_share"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/ui_menu_share">
    </item>
    <!--android:actionProviderClass="android.widget.ShareActionProvider"-->
    <item
        android:id="@+id/menuitem_about"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        android:title="@string/ui_menu_about">
    </item>
    <item
        android:id="@+id/menuitem_feedback"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        android:title="@string/ui_menu_feedback">
    </item>
    <item
        android:id="@+id/menuitem_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never"
        android:title="@string/ui_menu_quit">
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings">
    </item>

</menu>



